<resources>
    <string name="app_name">Trippy</string>
    <string name="app_name_caps">TRIPPY</string>
    <string name="app_name_description">The most efficient Taxi services</string>
    <string name="title_activity_maps">Map</string>

    <plurals name="numberOfSecondsRemaining">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">You will get OTP by SMS in %d second</item>
        <item quantity="other">You will get OTP by SMS in %d seconds</item>
    </plurals>

    <string name="otp_static">You will get OTP by SMS in 20 seconds</string>
    <string name="agree_terms">By registering, you are agreeing to \n Terms &amp; Conditions</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to use the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings.</string>
    <string name="permission_required_toast">Please provide, requested permission for this app.</string>

    <string name="title_canteen_intro1" translatable="false">Menus right on your screen</string>
    <string name="title_canteen_intro2" translatable="false">Cash on delivery</string>
    <string name="title_canteen_intro3" translatable="false">Choose what you like</string>
    <string name="description_canteen_intro1" translatable="false">Looking for something to eat? Just browse the feed wherever you are.</string>
    <string name="description_canteen_intro2" translatable="false">Order and we\'ll deliver the menu right in front of your door.</string>
    <string name="description_canteen_intro3" translatable="false">Bookmark a menu you wanted to save and keep track of its status whether it\'s available or not.</string>
    <string name="label_button_cta_canteen_intro" translatable="false">BOOK RIDE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_10_digit_mobile_number"><font size="18">10-digit mobile number</font></string>
    <string name="we_need_your_mobile_number_to_book_you_a_ride">We need your mobile number to book you a ride</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="google_api_connection_fail">Sorry, Connection to Google play services is failed.</string>
    <string name="next">next</string>
    <string name="country_code">+91</string>
    <string name="enter_a_valid_mobile_number">Enter a valid mobile number</string>
    <string name="verify_login"><![CDATA[Verify & login]]></string>
    <string name="verify_auto">Please wait.\nWe will auto verify the OTP sent to %1$s</string>
    <string name="enter_password">Enter password for the account linked to %1$s</string>
    <string name="log_in">LOG IN</string>
    <string name="enter_4_digit_otp"><font size="18">Enter 4-digit OTP</font></string>
    <string name="enter_full_name">Enter Full name</string>
    <string name="enter_email">Enter Email</string>
    <string name="log_in_password">or log in with password</string>
    <!--    Custom Fonts    -->
    <string name="font_regular">fonts/Quicksand-Regular.ttf</string>
    <string name="font_bold">fonts/Quicksand-Bold.ttf</string>
    <string name="font_light">fonts/Quicksand-Light.ttf</string>
    <string name="nav_book_ride">Book Your Ride</string>
    <string name="nav_your_rides">Your Rides</string>
    <string name="nav_rate_card">Rate Card</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_payment">Payments</string>
    <string name="nav_offers"><![CDATA[Offers & Free Rides]]></string>
    <string name="nav_emergency">Emergency Contacts</string>
    <string name="nav_support">Support</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="profile_name_hint">Profile name</string>
    <string name="name_text">Name</string>
    <string name="password_hint">Password</string>
    <string name="email_address_hint">Email address</string>
    <string name="log_out">LOGOUT</string>
    <string name="profiles_amp_settings"><![CDATA[Profiles & Settings]]></string>
    <string name="save">Save</string>
    <string name="enter_details_to_create_account_with_phone_number">Enter details to create account with phone number</string>
    <string name="input_location_hint">Search for a locality or landmark..</string>
    <string name="location">Location</string>
    <string name="location_detail">Location Detail</string>
    <string name="pickup_from">Enter pickup location</string>
    <string name="drop_to">Enter drop location</string>
    <string name="full_name"><font size="18">Full name</font></string>
    <string name="email_optional"><font size="18">Email (Optional)</font></string>
    <string name="create_account">Create account</string>
    <string name="enter_details_to_create_account_with">Enter details to create account with %1$s</string>
    <string name="register">REGISTER</string>
    <string name="content_description">content description</string>
    <string name="password_content">**********</string>
    <string name="log_in_with_password">Log in with password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
</resources>
