<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bl.taxi.rider.fragments.OTPFragment">

    <RelativeLayout
        android:id="@+id/otp_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@android:color/white">

            <ImageButton
                android:id="@+id/otp_button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="10dp"
                android:src="@drawable/ic_close_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:gravity="center"
                fontPath="fonts/Quicksand-Bold.ttf"
                android:text="@string/verify_login"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:ignore="MissingPrefix"
                />

        </android.support.v7.widget.Toolbar>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_below="@+id/otp_toolbar_layout"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:foreground="@drawable/bottom_shadow">

        <TextView
            android:id="@+id/verify_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:text="@string/verify_auto"
            android:textColor="@color/otp_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/otp_mobile_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_text"
            android:text="@string/_10_digit_mobile_number"
            android:textColor="@color/otp_text"
            android:textSize="18sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/otp_number_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp_mobile_no"
            android:layout_marginTop="25dp"
            android:hint="@string/enter_4_digit_otp"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="22sp"
            app:met_baseColor="@android:color/black"
            app:met_clearButton="true"
            app:met_floatingLabel="none"
            app:met_iconPadding="10dp"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true" />

        <TextView
            android:id="@+id/log_in_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_password"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/otp_number_edit"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignTop="@+id/button_next"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:text="@string/log_in"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/otp_count_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/otp_static"
            android:textColor="@color/otp_text"
            android:layout_above="@id/button_next"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </RelativeLayout>

</RelativeLayout>