<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/password_container"
    tools:context="bl.taxi.rider.fragments.PasswordFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/otp_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/ic_close_black_24dp"
            android:contentDescription="@string/content_description" />

        <TextView
            android:id="@+id/textView"
            fontPath="fonts/Quicksand-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:gravity="center"
            android:text="@string/log_in_with_password"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/otp_toolbar_layout"
        android:layout_alignLeft="@id/otp_toolbar_layout"
        android:layout_alignStart="@id/otp_toolbar_layout"
        android:layout_alignRight="@id/otp_toolbar_layout"
        android:layout_alignEnd="@id/otp_toolbar_layout"
        android:layout_marginBottom="-7dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        tools:targetApi="lollipop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_toolbar_layout"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:foreground="@drawable/bottom_shadow">

        <TextView
            android:id="@+id/verify_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/enter_password"
            android:textColor="@color/color_otp_text"
            android:textSize="18sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/verify_text"
            android:layout_alignLeft="@id/verify_text"
            android:layout_alignRight="@id/verify_text"
            android:layout_alignStart="@id/verify_text"
            android:layout_below="@id/verify_text"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:textSize="22sp"
            app:met_baseColor="@android:color/black"
            app:met_clearButton="true"
            app:met_floatingLabel="none"
            app:met_iconPadding="10dp"
            app:met_primaryColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/input_password"
            android:layout_alignLeft="@id/input_password"
            android:layout_alignRight="@id/input_password"
            android:layout_alignStart="@id/input_password"
            android:layout_below="@id/input_password"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            fontPath="fonts/Quicksand-Bold.ttf"
            android:background="@android:color/transparent"
            android:text="@string/log_in"
            android:textColor="@android:color/darker_gray"
            tools:ignore="MissingPrefix" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignTop="@id/button_log_in"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

</RelativeLayout>